<resources>

    <!-- Strings used for fragments for navigation -->
    <string name="app_name">Movistar App</string>
    <string name="textView">Bienvenido</string>
    <string name="textView2">Ingrese su Email</string>
    <string name="textView3">Ingrese su Password</string>
    <string name="textView4">No tenes Usuario?</string>
    <string name="textView5">Gracias por Visitarnos</string>
    <string name="textview6">Encontranos en nuestro local de Santa Rosa</string>
    <string name="textView7">Mira Nuestras Ofertas</string>
    <string name="textView8">Telefonia Fija</string>
    <string name="textView9">Telefono fijo en casa</string>
    <string name="textView10">Telefono fijo en el campo</string>
    <string name="textView11">Internet en todos Lados</string>
    <string name="textView12">Internet en casa</string>
    <string name="textView13">Internet en el campo</string>
    <string name="textView14">Te invitamos a Registrarte</string>
    <string name="btnLoginAceptar">Ingresar</string>
    <string name="btnRegistrar">Registrate</string>
    <string name="btnHmtelefcel">Celulares</string>
    <string name="btnHminternet">Internet</string>
    <string name="btnHmtelfijo">Telefonia</string>
    <string name="btnRegConfirmar">Confirmar Registro</string>



    <string name="mnuPrincE_mail">Enviar E-mail</string>
    <string name="mnuPrincContacto">Contactanos por Telefono</string>
    <string name="mnuPrincCartProy">Cartera de Proyectos</string>
    <string name="textView15">Nombre y Apellido</string>
    <string name="textView16">Numero de Telefono</string>
    <string name="textView17">E-mail</string>
    <string name="textView18">Ingrese Contraseña</string>
    <string name="textView19">Confirmar Contraseña</string>
    <string name="edtRegNombre">Nombre y Apellido</string>
    <string name="edtRegTelefono">Telefono</string>
    <string name="edtRegEmail">E-mail</string>


</resources>