<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="201dp"
        android:layout_height="26dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="cursive"
        android:text="@string/textView5"
        android:textColor="#E2ECDE"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="193dp"
        android:layout_height="121dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/hotsale" />

    <Button
        android:id="@+id/btnHmtelefcel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="272dp"
        android:text="@string/btnHmtelefcel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <Button
        android:id="@+id/btnHminternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btnHminternet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnHmtelefcel"
        app:layout_constraintTop_toTopOf="@+id/btnHmtelefcel" />

    <Button
        android:id="@+id/btnHmtelfijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-15dp"
        android:text="@string/btnHmtelfijo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/btnHminternet"
        app:layout_constraintTop_toTopOf="@+id/btnHminternet" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="105dp"
        android:layout_height="171dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/btnHmtelefcel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnHmtelefcel"
        app:layout_constraintTop_toBottomOf="@+id/btnHmtelefcel"
        app:srcCompat="@drawable/celulares" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="130dp"
        android:layout_height="169dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/btnHmtelefcel"
        app:layout_constraintTop_toBottomOf="@+id/btnHmtelefcel"
        app:srcCompat="@drawable/internet" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="109dp"
        android:layout_height="189dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHminternet"
        app:layout_constraintTop_toBottomOf="@+id/btnHmtelefcel"
        app:srcCompat="@drawable/telefonia" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="167dp"
        android:layout_height="153dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logohome" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="377dp"
        android:layout_height="26dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/textview6"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.938" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="383dp"
        android:layout_height="231dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/footer" />

</androidx.constraintlayout.widget.ConstraintLayout>